--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     width: 310px;
 }
 #weekday{
-    margin-left: -14%;
+    margin-left: -12%;
     float: left;
     width: 200px;
 }
@@ -70,20 +70,33 @@ body{
 }
 .btn{
     padding: 10px 60px;
+    margin-top: 10%;
+    margin-left: -30%;
 }
 .popup{
+    display: flex;
+    flex-wrap: wrap;
     width: 300px;
+    height: 120px;
     border-radius: 6px;
+    border-color: #050505;
+    border-style: solid;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     padding: 0 30px 30px;
-    color : #333;
+    color : #171717;
     transition: transform 0.4s;
     visibility: hidden;
+    background: #fff;
+    justify-content: center;
 }
 .open-popup{
     visibility: visible;
+}
+.input{
+    width: 40%;
+    margin: 10px;
 }
