--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body{
 }
 .btn{
     padding: 10px 60px;
-    margin-top: 10%;
+    margin-top: -2%;
     margin-left: -30%;
 }
 .popup{
@@ -105,4 +105,13 @@ body{
 .input{
     width: 40%;
     margin: 10px;
+}
+table, th, td {
+    border: 1px solid black;
+}
+table{
+    margin-left: 78px;
+    margin-top: 90px;
+    width: 400px;
+    visibility: visible;
 }
