--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ body{
     width: 200px;
 }
 .caloriesleftsofar{
-    clear: both;
     float: left;
+    width: 620px;
     margin-left: 5%;
     margin-top: -21%;
 }
@@ -52,6 +52,9 @@ body{
 #caloriesleft{
     float: right;
     width: 310px;
+}
+#caloriesSoFarNumber{
+    margin-top: -100%;
 }
 #weekday{
     margin-left: -20%;
