--- a/style.css
+++ b/style.css
@@ -70,9 +70,10 @@ body{
     margin-left: 1%;
 }
 .btn{
+    margin-left: 11%;
     position: absolute;
     padding: 10px 60px;
-    margin-top: 80px;
+    margin-top: 10px;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -110,8 +111,8 @@ table, th, td {
     border: 1px solid black;
 }
 table{
-    justify-content: center;
-    position: absolute;
+    margin-top: 75px;
+    position: relative;
     margin-left: 75px;
     width: 650-px;
     visibility: visible;
