--- a/style.css
+++ b/style.css
@@ -95,24 +95,9 @@ body{
     background-color: rgb(204, 248, 211);
     border-radius: 10%;
 }
-.caloriesleftsofar{
-    float: left;
-    width: 620px;
+.calsLeftSoFar {
+    margin-top: -16.5%;
     margin-left: 5%;
-    margin-top: -21%;
-}
-#caloriessofar{
-    float: left;
-    width: 310px;
-}
-#caloriesleft{
-    float: right;
-    width: 310px;
-
-}
-#caloriesSoFarNumber{
-    margin-top: -100%;
-    margin-right: 10%;
 }
 #weekday{
     margin-left: -20%;
@@ -121,6 +106,18 @@ body{
 }
 #nextmeal{
     margin-left: -5%;
+}
+#calsLeftText {
+    margin-left: 21%;
+    margin-top: -3.2%;
+}
+#caloriesleftsofarNumber{
+    margin-left: 16.5%;
+    margin-top: -3.2%;
+}
+#caloriesleftNumber {
+    margin-left: 35.3%;
+    margin-top: -3.2%;
 }
 #nextmealdisplay{
     margin-left: 1%;
