displaying time should be correct

--- a/style.css
+++ b/style.css
@@ -1,41 +1,23 @@
-.whytitle{
-    position: relative;
-    left: 73%;
-    font-weight: bold;
-    padding-top: 50px;
-    width: 10px;
-}
-.else{
-    float: right;
-    font-weight: bold; 
-    padding-left: 100px;
-}
-.whyblock{
-    display: flex;
-    position: relative;
-    width: 40%;
-    float: right;
-    align-items: center;
-    }
 body{
-    margin: 10;
     font-family: 'Times New Roman';
 }
+
 .time{
     display: flex;
     flex-direction: row;
     clear: both;
     float: left;
-    margin-left: 5%;
-    margin-top: -23%;
+    margin-left: 10%;
+    padding: -3%;
+    width: 36%;
 }
+
 .dropbtn {
-    margin-top: -2%;
     color:black;
     background-color:white;
     border: none;
-    height: 10px;
-    font-size: 17px;
+    height: 10%;
+    font-size: 100%;
     font-weight:bolder;
 }
 
@@ -74,19 +56,21 @@ body{
 .meal {
     width: 40%;
     height: 16%;
-    margin: 10px;
+    margin: 3%;
 }
 #dayy{
     float: left;
-    width: 200px;
+    width: 11%;
 }
 #chooseMealTime {
     height: 10%;
     margin-top: 1%;
 }
 #checkmark {
-    margin-top: 0.68%;
-    margin-left: 30%;
+    margin-top: 17%;
+    margin-left: -12%;
+    width: 5%;
+    height: 10%;
     visibility: hidden;
     border: none;
     background-color: white;
@@ -96,37 +80,41 @@ body{
     border-radius: 10%;
 }
 .calsLeftSoFar {
-    margin-top: -16.5%;
-    margin-left: 5%;
+    margin-left: 10%;
+    display: inline-block;
+    width: 130%;
 }
 #weekday{
-    margin-left: -20%;
     float: left;
-    width: 200px;
+    width: 30%;
+    margin-left: 1%;
 }
 #nextmeal{
-    margin-left: -5%;
+    margin-left: 2%;
+    width: 30%;
 }
 #calsLeftText {
-    margin-left: 21%;
-    margin-top: -3.2%;
+    margin-left: 70%;
+    margin-top: 10%;
 }
+#calsSoFarText {
+    margin-top: 2.5%;
+}
+
 #caloriesleftsofarNumber{
-    margin-left: 16.5%;
+    margin-left: 16%;
     margin-top: -3.2%;
 }
 #caloriesleftNumber {
     margin-left: 35.3%;
-    margin-top: -3.2%;
+    margin-top: -3.3%;
 }
-#nextmealdisplay{
-    margin-left: 1%;
-}
+
 .btn{
-    margin-left: 17.6%;
     position: absolute;
     padding: 10px 60px;
-    margin-top: 10px;
+    margin-left: 20%;
+    top: 40%;
 }
 
 input::-webkit-outer-spin-button,
@@ -145,8 +133,8 @@ input::-webkit-inner-spin-button {
 .popup{
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
-    height: 120px;
+    width: 21%;
+    height: 17%;
     border-radius: 6px;
     border-color: #050505;
     border-style: solid;
@@ -155,7 +143,7 @@ input::-webkit-inner-spin-button {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    padding: 0 30px 30px;
+    padding: 0 1% 2%;
     color : #171717;
     transition: transform 0.4s;
     visibility: hidden;
@@ -165,7 +153,7 @@ input::-webkit-inner-spin-button {
 #addmealbtn {
     border: none;
     background-color: white;
-    margin-top: 1%;
+
 }
 #addmealbtn:hover {
     background-color: rgb(211, 211, 211);
@@ -174,8 +162,8 @@ input::-webkit-inner-spin-button {
 .mealpopup{
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
-    height: 120px;
+    width: 21%;
+    height: 17%;
     border-radius: 6px;
     border-color: #050505;
     border-style: solid;
@@ -184,7 +172,7 @@ input::-webkit-inner-spin-button {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    padding: 0 30px 30px;
+    padding: 0 1% 2%;
     color : #171717;
     transition: transform 0.4s;
     visibility: hidden;
@@ -196,7 +184,7 @@ input::-webkit-inner-spin-button {
 }
 .input{
     width: 40%;
-    margin: 10px;
+    margin: 3%;
 }
 table, th, td {
     border: 1px solid black;
@@ -208,9 +196,10 @@ table, th, td {
     }
   }
 table{
-    margin-top: 75px;
+    margin-top: 15%;
     position: relative;
-    margin-left: 75px;
-    width: 565px;
+    float: left;
+    margin-left: 10%;
+    width: 37%;
     visibility: visible;
 }
