--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body{
 }
 
 table {
-    position: relative;
+    position: absolute;
     float: left;
     margin-left: 10%;
     width: 37%;
@@ -126,11 +126,7 @@ table, th, td {
 }
 
 #checkmark {
-    margin-top: 17%;
-    margin-left: -12%;
-    width: 5%;
-    height: 10%;
-    visibility: hidden;
+    margin-left: 85%;
     border: none;
     background-color: white;
 }
@@ -139,25 +135,38 @@ table, th, td {
     background-color: rgb(204, 248, 211);
     border-radius: 10%;
 }
-
-
-
-.btn{
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    margin-left: 20%;
+    width: 18%;
+    height: 10;
+}
+#btny{
     position: absolute;
     padding: 10px 60px;
-    margin-left: 20%;
-    top: 40%;
+    display: flex;
 }
 
+#tblebtn {
+    display: flex;
+    justify-content: left;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 #deleteButton {
     margin-left: 9.5%;
     background-color: white;
     border: white;
+    height: 11%;
+}
+#tble button {
+    position: relative;
 }
 #deleteButton:hover {
     background-color: rgb(245, 188, 188);
