--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ input::-webkit-inner-spin-button {
 
 @media only screen and (max-width: 620px) {
     /* For mobile phones: */
-    .wholepage {
+    body {
       width: 150%;
     }
   }
